# fudi-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
doc/: parsing_fsm.gv
examples/: receive_bang.pd  receive_bang.rs  receive_random_floats.pd  receive_random_floats.rs  send_random_floats.pd  send_random_floats.rs
src/: lib.rs  parser.rs
