[package]
name = "fudi-rs"
version = "0.3.1"
authors = ["tpltnt"]
edition = "2018"

description = "An implementation of the Fast Universal Digital Interface networking protocol to communicate with Pure Data via the netsend / netreceive objects."
license = "MIT AND Apache-2.0"
repository = "https://github.com/tpltnt/fudi-rs"
documentation = "https://docs.rs/fudi-rs/"
keywords = ["networking", "sound", "music", "puredata"]
readme = "README.md"
categories = ["api-bindings", "network-programming", "parsing"]

[dependencies]
nom = "8.0.0"
rand = "0.9"
